# dns.play

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  deploy.sh  dns_parser.cpp  dns_processor.cpp  dns_query_packet.cpp  dns_response_packet.cpp  docker-compose.yml  main.cpp  readme.MD  rolldice.cpp  udp.cpp  uuid.cpp
docs/: CNAME  index.html  script.js  style.css
includes/: dns.h  dns_parser.h  dns_processor.h  dns_query_packet.h  dns_response_packet.h  rolldice.h  udp.h  uuid.h
website/: commands.json  index.html  script.js  style.css
